# SECDA-Sandbox

./: .bazelrc  .gitignore  .gitmodules  BUILD  MODULE.bazel  README.md  WORKSPACE  config.json  def.bzl  dse_run.py  dse_run_README.md  secda_sandbox.code-workspace  update_launch.ipynb
DSE_Explorer/: README.md  dse_explorer.py  dse_setting.json  parse_hardware.py  parse_performance.py  requirements.txt  run_pipeline.sh  status_monitor.py
DSE_Explorer/scripts/: bazel_utils.py  hw_params.py  param_replace.py  parse_hls.py  parse_performance.py  project_status_monitor.py  script_gen.py  settings.py  shell_writers.py
Exp_Suite/: README.md  configs.sh  parse_logs.py  secda_exp_gen.sh
SECDA-DSE/: README.md  llm_to_dse.py
SECDA-DSE/input_space/v1/: BUILD  CoT-arch.txt  experiment.cc  hw_params.json
SECDA-DSE/mcp_server/: server.py
experiments/mm_exp/v1/: BUILD  experiment.cc  hw_params.json
hardware_automation/: hw_gen.py  hw_gen.tpl.sh
hardware_automation/bitstreams/KRIA/: DMA_EXP_KRIA_1_0.hwh  DMA_EXP_KRIA_2_0.hwh  DMA_EXP_KRIA_2_1.hwh  DMA_EXP_KRIA_3_0.hwh  DMA_EXP_KRIA_3_1.hwh  DMA_EXP_KRIA_4_0.hwh  DMA_EXP_KRIA_4_1.hwh  MM_EXP_1_0.hwh  MM_EXP_KRIA_1_0.hwh
hardware_automation/bitstreams/Z1/: AXIMM_TEST_1_0.bit  AXIMM_TEST_1_0.hwh  DMA_EXP_1_0.bit  DMA_EXP_1_0.hwh  DMA_EXP_Z1_1_0.bit  DMA_EXP_Z1_1_0.hwh  DMA_EXP_Z1_2_0.bit  DMA_EXP_Z1_2_0.hwh  DMA_EXP_Z1_2_1.bit  DMA_EXP_Z1_2_1.hwh  DMA_EXP_Z1_3_0.bit  DMA_EXP_Z1_3_0.hwh  DMA_EXP_Z1_3_1.bit  (+7 more)
hardware_automation/hlx_templater/: hlx_script_templater.ipynb  tcl_templater.json
platform/: BUILD
(+69 files in other folders)
