###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_cc", version = "0.0.9")
# bazel_dep(name = "systemc", version = "2.3.3")
bazel_dep(name = "systemc_bazel", version = "2.3.3b")

# bazel_dep(name = "secda_tools", version = "0.2.0b")
# bazel_dep(name = "secda_tools", version = "0.2.1")


